# sdl3d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Skeletal.sln
Skeletal/: Skeletal.vcxproj  Skeletal.vcxproj.filters  main.cpp  sh.frag  vert.spv
res/: fragment.spv  sh.vert
res/shaders/: compile_shaders.sh  sh.frag
res/shaders/code/: sh.vert  texpos.frag  texpos.vert
res/shaders/compiled/: shfrag.spv  shvert.spv  texposfrag.spv  texposvert.spv
src/: image.cpp  image.h  main.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h
